infra-terraform/modules/security_group/main.tf
resource "aws_security_group" "alb" {
  name        = "${var.name_prefix}-alb-sg"
  description = "ALB ingress security group"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = var.alb_ingress_cidrs
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = var.alb_ingress_cidrs
  }

  egress {
    from_port   = 0             # all ports
    to_port     = 0             # all ports
    protocol    = "-1"          # it means all protocols
    cidr_blocks = ["0.0.0.0/0"] # allow all outbound traffic
  }

  tags = merge(var.tags, { Name = "${var.name_prefix}-alb-sg" })
}

resource "aws_security_group" "app" {
  name        = "${var.name_prefix}-app-sg"
  description = "Shared SG for ECS services and PostgreSQL EC2"
  vpc_id      = var.vpc_id

  # for the ecr service: order-bot-svc
  ingress {
    from_port       = var.order_bot_port
    to_port         = var.order_bot_port
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  # for the ecr service: order-bot-mgmt-svc
  ingress {
    from_port       = var.order_bot_mgmt_port
    to_port         = var.order_bot_mgmt_port
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  # for database connection
  ingress {
    from_port = 5432
    to_port   = 5432
    protocol  = "tcp"
    self      = true
  }

  # allow to pull an image
  ingress {
    from_port = 443
    to_port   = 443
    protocol  = "tcp"
    self      = true
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(var.tags, { Name = "${var.name_prefix}-app-sg" })
}
